# openstack-virtual-baremetal

./: .gitignore  .testr.conf  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini  troubleshooting.rst
bond-network-templates/: ui-settings.pickle
environments/: all-networks-port-security.yaml  all-networks-public-bond-port-security.yaml  all-networks-public-bond.yaml  all-networks.yaml  base-extra-node.yaml  base-role.yaml  base.yaml  bmc-use-cache.yaml  boot-baremetal-from-volume.yaml  boot-from-volume.yaml  boot-undercloud-from-volume.yaml  create-private-network.yaml  port-security.yaml  public-router.yaml  quintupleo-no-undercloud.yaml  routed-networks-configuration.yaml  routed-networks-role.yaml  routed-networks.yaml  undercloud-floating-existing.yaml  undercloud-floating-none.yaml
ipv6-network-templates/: DEPRECATED  network-isolation-absolute.yaml
ipxe/: .gitignore  Makefile  README
network-templates/: network-isolation-absolute.yaml  network-isolation.yaml  ui-settings.pickle
openstack_virtual_baremetal/: auth.py  build_nodes_json.py  deploy.py  openstackbmc.py
sample-env-generator/: environments.yaml
templates/: baremetal-networks-all.yaml  baremetal-networks-none.yaml  baremetal-networks-routed.yaml  baremetal-ports-all-port-security.yaml  baremetal-ports-all.yaml  baremetal-ports-default-port-security.yaml  baremetal-ports-default.yaml  baremetal-ports-extra-node-all.yaml  baremetal-ports-extra-node-fip-port-security.yaml  baremetal-ports-extra-node-port-security.yaml  baremetal-ports-public-bond-port-security.yaml  (+24 more)
(+62 files in other folders)
