[metadata]
name = openstack-virtual-baremetal
summary = A collection of tools for using OpenStack instances to test baremetal deployment
description-file =
    README.rst
author = Ben Nemec
author-email = bnemec@redhat.com
home-page = http://www.redhat.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    openstack_virtual_baremetal

#[entry_points]
#console_scripts =
#    dlrn-repo = dlrn_repo.main:main


[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
